<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/header" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_logo_login" />

    <TextView
        android:id="@+id/txv_file_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/str_download_file"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/txv_file_date"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/drw_edittext_bg"
        android:freezesText="true"
        android:gravity="center"
        android:hint="@string/str_file_date"
        android:maxLines="1"
        android:onClick="onClick"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorTitle" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_File"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />
    <Button
        android:id="@+id/btn_file_download"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/str_download_pdf"
        android:textColor="@android:color/white" />


</LinearLayout>
