<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.admin.ajs.activity.SignInActivity"
    tools:showIn="@layout/activity_sign_in">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_logo_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lin_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/username" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_userName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:hint="@string/hint_username"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textSize="12sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/password" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_password"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textSize="12sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>



            <Button
                android:id="@+id/btn_login"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:onClick="onClick"
                android:text="@string/btn_login" />

            <TextView
                android:id="@+id/txv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/str_forgot_password"
                android:onClick="onClick"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/lin_registerAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txv_noAccount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_no_account"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txv_registerAccount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/str_reg_account"
            android:textColor="@color/colorRed"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>